# shifthelper_webinterface

./: .gitignore  .start.sh.swp  Dockerfile  LICENSE  README.md  app.py  nginx-without-ssl.conf  nginx.conf  pyproject.toml  requirements.txt  run.py  shifthelper_nginx.conf  shifthelper_uwsgi.ini  start.sh
shifthelper_webinterface/: __init__.py  authentication.py  communication.py  database.py  json_encoder.py  log.py
shifthelper_webinterface/static/: site.js  style.css
shifthelper_webinterface/static/css/: fa-icons.css
shifthelper_webinterface/static/font/: fontello.eot
shifthelper_webinterface/templates/: call_failed.html  call_placed.html  head.html  index.html  layout.html  log.html  login.html  message_sent.html  telegram_failed.html  telegram_new_user.html
